# triosense

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  BUILD_SPEC.md  CLAUDE.md  DATABASE_SCHEMA.md  LICENSE  Makefile  README.md  docker-compose.yml
.cursor/rules/: 00-project-context.mdc  01-backend-laravel.mdc  02-frontend-nextjs.mdc  03-mobile-flutter.mdc  04-edge-python.mdc  05-naming-conventions.mdc
.github/workflows/: backend.yml  dashboard.yml  edge.yml  mobile.yml
apps/backend/: .env.example  .env.testing  README.md  artisan  composer.json  (+2 more)
apps/edge/: .env.example  README.md  pyproject.toml
apps/edge/config/: local.webcam.mock.yaml  local.webcam.yaml  location_3.example.yaml
apps/edge/scripts/: benchmark_fps.py
apps/edge/tests/: conftest.py
apps/edge/tests/integration/: test_pipeline.py
apps/edge/tests/unit/: test_buffer.py  test_command_subscriber.py  test_config.py  test_detector.py  test_preview.py  test_tripwire.py  test_webcam_config.py
apps/edge/triosense_edge/: __init__.py  __main__.py  config.py  config_loader.py  simulate.py
apps/edge/triosense_edge/calibration/: server.py
apps/edge/triosense_edge/pipeline/: detector.py  runner.py  stream.py  tracker.py  tripwire.py  types.py
apps/edge/triosense_edge/preview/: annotate.py  server.py  state.py
apps/edge/triosense_edge/transport/: buffer.py  command_subscriber.py  mqtt_client.py  schemas.py
scripts/: backend-queue-docker.sh  backend-reverb-docker.sh  backend-serve-docker.sh  backend-tick-docker.sh  backend-worker-docker.sh
(+234 files in other folders)
